Footer fix on mobile

--- a/styles.css
+++ b/styles.css
@@ -193,6 +193,7 @@ p {
       text-align: center;
       height: 200px;
       width: 100%;
+      position:fixed;
     }
 
     .other-footer {
